modifies tests now data isnt stored in memory